--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,14 +11,6 @@ jobs:
     steps:
     - uses: actions/checkout@master
 
-
-    - name: Docker pull image for code
-      run: docker pull golang:1.19
-
-    - name: Compile code
-      run: docker run --rm --volume `pwd`:/tsv2table/ golang:1.19 sh -c 'cd /tsv2table/tsv2table; go build .'
-
-
     - name: Docker pull image for tests
       run: docker pull perl:5.38.0
 
@@ -26,4 +18,4 @@ jobs:
       run: docker build . --file Dockerfile.tsv2table_t --tag tsv2table_t:${{ github.sha }}
 
     - name: Run test in t/
-      run: docker run --rm tsv2table_t:${{ github.sha }} prove -It/lib/ -vm t/
+      run: docker run --rm --volume=`pwd`/tsv2table:/app/tsv2table tsv2table_t:${{ github.sha }} prove -It/lib/ -vm t/
