--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,4 +18,4 @@ jobs:
       run: docker build . --file tests/Dockerfile.tsv2table_t --tag tsv2table_t:${{ github.sha }}
 
     - name: Run test in tests/
-      run: docker run --rm --volume=`pwd`/tsv2table:/app/tsv2table tsv2table_t:${{ github.sha }} prove -lvm tests/
+      run: docker run --rm --volume=`pwd`/tsv2table:/app/tsv2table --volume=`pwd`/README.md:/app/README.md tsv2table_t:${{ github.sha }} prove -lvm tests/
