--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -13,9 +13,10 @@ jobs:
     steps:
     - uses: actions/checkout@master
 
-    - name: Prepare release and create GitHub release
-      run: |
-        gh release create ${{ github.ref }} -t "Release ${{ github.ref }}" -n "Release notes for ${{ github.ref }}"
+    - name: Add version information
+      run: sed -i "s/VERSION = 'dev';/VERSION = '${{ github.ref_name }}'" tsv2table
+
+    - name: Create GitHub release
+      run: gh release create ${{github.ref_name}} -t "Release ${{github.ref_name}}" tsv2table
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
