--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -16,7 +16,10 @@ jobs:
     - name: Add version information
       run: sed -i "s/VERSION = 'dev';/VERSION = '${{ github.ref_name }}';/" tsv2table
 
+    - name: Prepare release_notes
+      run: cat CHANGELOG.md |grep -E '^${{github.ref_name}}' -A1000|grep -v '```' > release_notes
+
     - name: Create GitHub release
-      run: gh release create ${{github.ref_name}} -t "Release ${{github.ref_name}}" tsv2table
+      run: gh release create ${{github.ref_name}} -t "Release ${{github.ref_name}}" --notes-file release_notes tsv2table
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
