--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -20,6 +20,11 @@ jobs:
       run: echo '```' > release_notes; cat CHANGELOG.md |grep -E '^${{github.ref_name}}' -A1000 >> release_notes
 
     - name: Create GitHub release
-      run: gh release create ${{github.ref_name}} -t "Release ${{github.ref_name}}" --notes-file release_notes tsv2table
+      run: >
+        gh release create
+        ${{github.ref_name}}
+        --title "Release ${{github.ref_name}}"
+        --notes-file ./release_notes
+        ./tsv2table
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
